DI on the presentation lever implemented

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Shaker" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Shaker" parent="@style/Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@color/cocktail_bg</item>
+    </style>
+
+    <style name="Theme.CustomSplashScreenTheme" parent="Theme.Shaker">
+        <item name="windowSplashScreenBackground">@color/cocktail_bg</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/shaker_app_logo</item>
+        <item name="windowSplashScreenAnimationDuration">600</item>
+        <item name="postSplashScreenTheme">@style/Theme.Shaker</item>
+    </style>
 </resources>
